--- a/package.json
+++ b/package.json
@@ -10,23 +10,27 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.16",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/postcss": "^4.0.15",
     "@uiw/react-md-editor": "^4.0.5",
     "next": "15.2.1",
     "notion-to-md": "^3.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.0.1"
+    "react-markdown": "^10.0.1",
+    "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5"
   }
 }
