--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.1",
     "react-syntax-highlighter": "^15.6.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
