--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.16",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/postcss": "^4.0.15",
     "@uiw/react-md-editor": "^4.0.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "next": "15.2.1",
+    "next-themes": "^0.4.6",
     "notion-to-md": "^3.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "tailwindcss": "^4.0.15"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
