--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@giscus/react": "^3.1.0",
     "@notionhq/client": "^2.2.16",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
@@ -19,6 +20,7 @@
     "next": "15.2.1",
     "next-themes": "^0.4.6",
     "notion-to-md": "^3.1.6",
+    "octokit": "^4.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
