big big progress

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
+# Notion Client Auth
 NOTION_AUTH=
+
+# Notion Database IDs
 NOTION_ESSAYS_DB_ID=
 NOTION_WORDS_DB_ID=
 NOTION_NOTES_DB_ID=
 NOTION_RESUME_PAGE_ID=
+
+# GitHub
 GITHUB_TOKEN=
